apiproducts/quarkus/quarkus-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: quarkus-apiproduct
  namespace: quarkus
  labels:
    app: apis
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      # Need to specify the URLRewrite here. The URLRewrite set on the parent route, although correctly configured on the proxy,
      # will prevent the APIDoc from being stitched by the Portal controller.
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: quarkus
        namespace: quarkus
        port: 8080
